--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
-    "gh-pages": "^3.0.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
