--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid-19",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://p1995.github.io/corona",
+  "homepage": "http://p1995.github.io/CORONA",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
